general updates for v8.12